maqueta html todo list Controller de lista

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	implementation 'org.webjars:font-awesome:4.7.0'
+	implementation 'org.webjars:bootstrap:4.3.1'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
